@@ -1,5 +1,12 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.459 2005/12/16 18:57:57 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.460 2005/12/16 19:08:59 wolf31o2 Exp $
+
+  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/embedded/embedded-chroot.sh,
+  targets/embedded/embedded-controller.sh,
+  targets/embedded/embedded-fs-runscript.sh,
+  targets/embedded/embedded-preclean-chroot.sh:
+  Fixed up spacing/coding style on embedded.
 
   16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py,
   targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
